# hps-kmeans

./: README.md  hps-kmeans.cabal
Math/Statistics/: KMeans.hs
doc/examples/: 10k_5-means.hs
